Finishing footer, fixing some colours and spacing, and final touchups

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     --instagram-pink: #f6679c;
     --wifi-yellow: #fea501;
     --trans-blue: rgba(25, 178, 222, 0.6);
+    --background-color: #16242f;
   }
 
 
@@ -307,6 +308,17 @@ p {
   width: 60%;
 }
 
+.page__footer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.newsletter {
+  overflow: visible;
+  overflow-wrap: anywhere;
+}
+
 .heading {
   display: flex;
   flex-direction: column;
@@ -339,6 +351,7 @@ p {
   border: 0.25rem solid white;
   padding-left: 0.7rem;
   padding-right: 0.7rem;
+  padding-bottom: 0.1rem;
   border-radius: 50%;
   color: white;
 }
@@ -350,6 +363,7 @@ p {
   border: 0.25rem solid white;
   padding-left: 0.7rem;
   padding-right: 0.7rem;
+  padding-bottom: 0.1rem;
   border-radius: 50%;
   color: white;
 }
@@ -680,8 +694,22 @@ p {
 }
 
 .page__footer {
-  background-color: rgb(10, 10, 56);
+  background-color: var(--background-color);
   color: white;
+  position: relative;
+  padding-bottom: 2.5rem;
+}
+
+.page__footer::after {
+  position: relative;
+  padding-bottom: 2rem;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(to right, var(--background-color) 55%, var(--green) 55%, var(--green) 60%, var(--yellow) 60%, var(--yellow) 65%, var(--red) 65%, var(--red) 70%, var(--blue) 70%, var(--blue) 75%, var(--dark-blue) 75%, var(--dark-blue) 80%, var(--background-color) 80%); 
+  clear: both;
 }
 
 .fa-lightbulb-o {
@@ -721,7 +749,7 @@ p {
   bottom: 0;
   left: 0;
   width: 100%;
-  background: linear-gradient(to right, var(--blue) 27%, rgb(231, 231, 231) 27%, rgb(231, 231, 231) 100%); /* Adjust colors as needed */
+  background: linear-gradient(to right, var(--blue) 27%, rgb(231, 231, 231) 27%, rgb(231, 231, 231) 100%); 
 }
 
 .section-projects {
@@ -741,7 +769,7 @@ p {
   color: white;
 }
 
-.footer {
+.page__footer {
   padding-bottom: 10rem;
 }
 
@@ -749,6 +777,7 @@ p {
   margin: 2rem 0;
   position: relative;
   padding-bottom: 2rem;
+
 }
 
 .footer-heading-content {
@@ -770,17 +799,12 @@ p {
 }
 
 .footer-heading-image > img {
-  width: 8rem;
   height: 8rem;
   border-radius: 100%;
 }
 
 .footer-heading-text > p {
   font-style: italic;
-}
-
-.footer-item {
-  width: 95%;
 }
 
 .footer-item-text {
@@ -827,6 +851,26 @@ p {
   border-bottom: 1px solid var(--yellow);
 }
 
+.blue-line::after {
+  position: relative;
+  position: absolute;
+  padding-bottom: 0.1rem;
+  content: "";
+  top: 1;
+  left: 0;
+  width: 20%;
+  width: 0;
+  height: 0;
+  border-left: 0.6rem solid transparent;
+  border-right: 0.6rem solid transparent;
+  border-top: 0.6rem solid var(--blue);
+  margin-left: 1.5rem;
+}
+
+.blue-line {
+  border-bottom: 1px solid var(--blue);
+}
+
 .red-line::after {
   position: relative;
   position: absolute;
@@ -849,8 +893,8 @@ p {
 
 .footer-item-body-text > p {
   font-size: 0.8rem;
-  width: 100%;
-  line-height: 1.5rem;
+
+  line-height: 1.9rem;
 }
 
 .footer-body-icons {
@@ -892,20 +936,23 @@ p {
   display: grid;
   margin-top: 2rem;
   grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  height: 12rem;
+  margin-top: 1rem;
 }
 
 .footer-item-content-photos > img {
-  width: 7rem;
   height: 7rem;
   gap: -1rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .footer-item-content-twitter {
   display: flex;
-  flex-wrap: wrap;
   row-gap: 1rem;
-  margin-top: -1.5rem;
-  min-width: 100%;
+
 }
 
 .footer-item-twitter-icon {
@@ -913,8 +960,8 @@ p {
   justify-content: center;
   align-items: center;
   background-color: gray;
-  width: 3rem;
-  height: 3rem;
+  width: 25%;
+  height: 4rem;
   border-radius: 100%;
   margin-top: 1.2rem;
 }
@@ -924,14 +971,43 @@ p {
   width: 100%;
   line-height: 1.5rem;
   padding-left: 2rem;
-  width: 60%;
-  min-width: 60%;
+  width: 100%;
   padding-right: 1rem;
 }
 
 .tweet {
   font-weight: bold;
   color: var(--twitter-blue);
+}
+
+.footer-newsletter-text > p {
+  font-size: 0.8rem;
+  line-height: 1.9rem;
+}
+
+.email-input {
+  margin-top: 2rem;
+}
+
+.email-input >input {
+  height: 2.5rem;
+  width: 17.5rem;
+  color: white;
+  background-color: var(--red);
+  border: none;
+  padding-left: 2rem;
+}
+
+.email-input > button {
+  width: 3rem;
+  height: 2.62rem;
+  border: none;
+  background-color: var(--yellow);
+  position: absolute;
+}
+
+.email-input > button > i {
+  color: white;
 }
 
 /* Small only */
@@ -946,7 +1022,7 @@ p {
 .section-affiliates,
 .footer {
   margin: auto;
-  width: 23rem;
+  width: 70%;
 }
 
 .header {
@@ -1033,6 +1109,53 @@ p {
   .services-card--text {
     padding-left: 13px;
   }
+  .flickr-photos {
+    display: none;
+  }
+  .newsletter {
+    display: none;
+  }
+  .about-us > p {
+    display: none;
+  }
+
+  .green-line {
+    display: none;
+  }
+
+  .footer-body-icons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer-heading-text > p {
+    font-size: 0.8rem;
+  }
+
+  .page__footer::after {
+    background: linear-gradient(to right, var(--background-color) 15%, var(--green) 15%, var(--green) 30%, var(--yellow) 30%, var(--yellow) 45%, var(--red) 45%, var(--red) 60%, var(--blue) 60%, var(--blue) 75%, var(--dark-blue) 75%, var(--dark-blue) 90%, var(--background-color) 80%);
+    padding-bottom: 1.5rem;
+  }
+  
+  .footer-item{
+    margin-top: 2rem;
+  }
+
+  .footer-body-icons > i {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .footer-heading-content::after {
+    position: relative;
+    position: absolute;
+    padding-bottom: 0.1rem;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(to right, var(--blue) 35%, gray 35%)
+  }
 }
 
 /* Medium only */
@@ -1110,6 +1233,30 @@ p {
   }
   .image-hide {
     display: none;
+  }
+  .page__footer::after {
+    position: relative;
+    padding-bottom: 2rem;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(to right, var(--background-color) 40%, var(--green) 40%, var(--green) 50%, var(--yellow) 50%, var(--yellow) 60%, var(--red) 60%, var(--red) 70%, var(--blue) 70%, var(--blue) 80%, var(--dark-blue) 80%, var(--dark-blue) 90%, var(--background-color) 90%); 
+    clear: both;
+  }
+
+  .footer {
+    width: 80%;
+  }
+
+  .email-input >input {
+    height: 2.5rem;
+    width: 17.5rem;
+    color: white;
+    background-color: var(--red);
+    border: none;
+    padding-left: 2rem;
   }
 }
 
